# mx-algo

./: CMakeLists.txt
include/mx/algo/: mx_algo.hpp  mx_algo_defs.hpp
include/mx/algo/controller/: pid.hpp
include/mx/algo/filter/: average.hpp  lowpass.hpp
source/: mx_algo.cpp
